--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.20",
         "axios": "^0.27",
+        "flowbite": "^2.5.2",
         "laravel-vite-plugin": "^0.5.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.49",
+        "tailwindcss": "^3.4.17",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "swiper": "^11.2.7"
     }
 }
